--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ MODRINTH_URL=https://cdn.modrinth.com/data/Jkb29YJU/versions/UIAtF4al/COBBLEVERS
 # Server Config
 SERVER_NAME="CobbleVerse"
 SERVER_MOTD="meow :3"
-SERVER_ICON="https://tenor.com/view/shiggy-gif-12130695950241144281"
+SERVER_ICON="SERVER_ICON="https://media.tenor.com/qFjjshBkndkAAAAj/shiggy.gif""
 
 ALLOW_FLIGHT=True
 SPAWN_MONSTERS=False
