--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
-
 # The Name of Your World.  If you use a name that hasn't been used already, it will create a new world upon restart
 SERVER_WORLDNAME="CobbleVerse"
-MODRINTH_URL=https://cdn.modrinth.com/data/Jkb29YJU/versions/UIAtF4al/COBBLEVERSE%201.5.5.mrpack
+MODRINTH_URL=https://cdn.modrinth.com/data/Jkb29YJU/versions/3EqJgqlj/COBBLEVERSE%201.5.6.mrpack
 
 
 # Server Config
 SERVER_NAME="CobbleVerse"
-SERVER_MOTD="meow :3"
-SERVER_ICON="SERVER_ICON="https://media.tenor.com/qFjjshBkndkAAAAj/shiggy.gif""
+SERVER_MOTD="The cutest CobbleVerse server!"
+SERVER_ICON=https://media.tenor.com/qFjjshBkndkAAAAj/shiggy.gif
 
 ALLOW_FLIGHT=True
 SPAWN_MONSTERS=False
