Added a backup solution

--- a/.env
+++ b/.env
@@ -10,3 +10,11 @@ SERVER_ICON=https://media.tenor.com/qFjjshBkndkAAAAj/shiggy.gif
 
 ALLOW_FLIGHT=True
 SPAWN_MONSTERS=False
+
+# Please set a secure password
+RCON_PASSWORD=MySecretPassword123
+
+# Backups
+KEEP_BACKUPS=8
+BACKUP_INTERVAL=12h
+TZ=America/New_York
