--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ SERVER_ICON=https://media.tenor.com/qFjjshBkndkAAAAj/shiggy.gif
 RCON_PASSWORD=MySecretPassword123
 
 # Backups
-KEEP_BACKUPS=8
+KEEP_BACKUPS=5
 BACKUP_INTERVAL=12h
-TZ=America/New_York
+TZ=UTC
