--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       BACKUP_NAME: ${SERVER_WORLDNAME}
       PRUNE_BACKUPS_COUNT: ${KEEP_BACKUPS}
       BACKUP_INTERVAL: ${BACKUP_INTERVAL}
+      INITIAL_DELAY: 10m
       RCON_PASSWORD: ${RCON_PASSWORD}
       RCON_HOST: mc
       TZ: ${TZ}
